    * Switching in heavyweight checkouts uses the master branch's context, not
      the checkout's context.  (Adrian Wilkins)

  BUG FIXES:

    * Branching from a shared repository on a smart server into a new
      repository now preserves the repository format.
      (Andrew Bennetts, #269214)

    * ``bzr missing`` now accepts an ``--include-merges`` option.
      (Vincent Ladeuil, #233817)

    * Fix '_in_buffer' AttributeError when using the -Dhpss debug flag.
      (Andrew Bennetts)

    * Fix TooManyConcurrentRequests errors caused by a connection failure
      when doing ``bzr pull`` or ``bzr merge`` from a ``bzr+ssh`` URL.
      (Andrew Bennetts, #246233)

    * Make the first line of the manpage preamble a comment again.
      (David Futcher, #242106)

  DOCUMENTATION:

    * Explain revision/range identifiers. (Daniel Clemente)

  API CHANGES:

  TESTING:

    * ``bzrlib.tests.repository_implementations`` has been renamed to
      ``bzrlib.tests.per_repository`` so that we have a common structure
      (and it is shorter). (John Arbash Meinel, #239343)

    * ``LocalTransport.abspath()`` now returns a drive letter if the
      transport has one, fixing numerous tests on Windows.
      (Mark Hammond)

    * The full test suite is passing again on OSX.
      (Guillermo Gonzalez, Vincent Ladeuil)

  INTERNALS:


bzr 1.7rc2 IN DEVELOPMENT
-------------------------

  BUG FIXES:

    * Branching from a shared repository on a smart server into a new
      repository now preserves the repository format.
      (Andrew Bennetts, #269214)

    * Fix '_in_buffer' AttributeError when using the -Dhpss debug flag.
      (Andrew Bennetts)

    * ``bzr init`` no longer re-opens the BzrDir multiple times.
      (Vincent Ladeuil)


bzr 1.7rc1 2008-09-09
---------------------

This release candidate for bzr 1.7 has several bug fixes and a few
performance and feature improvements.  ``bzr rm`` will now scan for