@@ -1,4 +1,4 @@
-# Copyright (C) 2005, 2006, 2007 Canonical Ltd
+# Copyright (C) 2005, 2006, 2007, 2008 Canonical Ltd
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -2326,7 +2326,8 @@ class WorkingTree(bzrlib.mutabletree.MutableTree):
                     # value.
                     bzrdir_loc = bisect_left(cur_disk_dir_content,
                         ('.bzr', '.bzr'))
-                    if cur_disk_dir_content[bzrdir_loc][0] == '.bzr':
+                    if (bzrdir_loc < len(cur_disk_dir_content)
+                        and cur_disk_dir_content[bzrdir_loc][0] == '.bzr'):
                         # we dont yield the contents of, or, .bzr itself.
                         del cur_disk_dir_content[bzrdir_loc]
             if inv_finished:
