@@ -31,6 +31,10 @@ IN DEVELOPMENT
     * ``bzr missing`` now accepts an ``--include-merges`` option.
       (Vincent Ladeuil, #233817)
 
+    * Don't try to filter (internally) '.bzr' from the files to be deleted if
+      it's not there.
+      (Vincent Ladeuil, #272648)
+
     * Fix '_in_buffer' AttributeError when using the -Dhpss debug flag.
       (Andrew Bennetts)
 
